<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--
          Source: Activity title.
          Description: Title for the Settings activity.
      -->
    <string name="tts_settings_label">eSpeak TTS Settings</string>
    <!--
          Source: Preference title.
          Description: Title for the preference that controls default voice pitch.
      -->
    <string name="setting_default_pitch">Pitch</string>
    <!--
          Source: Preference title.
          Description: Title for the preference that controls default speech rate.
      -->
    <string name="setting_default_rate">Speech rate</string>
    <!--
          Source: Dialog text.
          Description: Status message shown when installing voice data.
      -->
    <string name="installing_voice_data">Installing voice data…</string>
    <!--
          Source: Dialog message.
          Description: Alert dialog prompting the user to set eSpeak as their default TTS engine.
      -->
    <string name="set_default_message">eSpeak is not set as your default text-to-speech engine.</string>
    <!--
          Source: Dialog message.
          Description: Alert dialog telling the user that voice data installation failed.
      -->
    <string name="voice_data_failed_message">eSpeak failed to install voice data. Please check your SD card.</string>
    <!--
          Source: Dialog message.
          Description: Alert dialog telling the user that an unknown error has occurred.
      -->
    <string name="error_message">Sorry, eSpeak failed to start.</string>
    <!--
          Source: Label text.
          Description: Label informing the user of the current text-to-speech language.
      -->
    <string name="current_tts_locale">Default voice</string>
    <!--
          Source: Label text.
          Description: Label informing the user of how many voices are installed.
      -->
    <string name="available_voices">Voices installed</string>
    <!--
          Source: Button label.
          Description: Button for launching general text-to-speech settings.
      -->
    <string name="tts_settings">General TTS settings</string>
    <!--
          Source: Button label.
          Description: Button for launching eSpeak-specific settings.
      -->
    <string name="engine_settings">eSpeak TTS settings</string>
    <!--
          Source: Label text.
          Description: Label informing the user that eSpeak is loading resources.
      -->
    <string name="loading">Loading, please wait…</string>
    <!--
          Source: Spoken aloud.
          Description: Sample text spoken aloud when the user is trying out a language.
      -->
    <string name="sample_text">This is a sample of text spoken in %s</string>
    <string name="status">Status</string>
    <string name="tts_version">eSpeak version</string>
    <string name="speak">Speak</string>
    <string name="ssml">Load SSML Template</string>
    <string name="synthesis_demo">Enter text to speak:</string>
    <string name="espeak_volume">Volume</string>
    <string name="formatter_wpm">%s WPM</string>
    <string name="formatter_percentage">%s%%</string>
    <string name="resetToDefault">Set to default</string>
    <string name="espeak_pitch_range">Pitch variation</string>
    <string name="espeak_variant">Voice variant</string>
    <string name="espeak_speak_punctuation">Speak punctuation</string>
    <string name="punctuation_all">All</string>
    <string name="punctuation_custom">Custom</string>
    <string name="punctuation_custom_fmt">Custom: %s</string>
    <string name="punctuation_none">None</string>
    <string name="punctuation_characters">Punctuation characters</string>
    <string name="category">Category</string>
    <string name="variant">Variant</string>
    <string name="variant_male">Male</string>
    <string name="variant_female">Female</string>
    <string name="variant_default">Default</string>
    <string name="variant_n">Variant %d</string>
    <string name="variant_young">Young</string>
    <string name="variant_old">Old</string>
    <string name="variant_croak">Croak</string>
    <string name="variant_whisper">Whisper</string>
    <string name="import_voice_title">Import eSpeak dictionary</string>
    <string name="import_voice_description">Import an eSpeak voice dictionary file from the SD card.</string>
</resources>
