<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/punctuation_all" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/punctuation_custom" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/none"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/punctuation_none" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/punctuation_characters"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:hint="@string/punctuation_characters" />

</LinearLayout>
