<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <ListView
            android:id="@+id/properties"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </ListView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synthesis_demo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine">

        </androidx.appcompat.widget.AppCompatEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speak" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ssml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssml" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
